Fix issues with scrolling on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -275,10 +275,8 @@ html {
 
 body {
   min-height: 100%;
-  height: 100%;
   background: url('../img/vaporwave_background.png') center center no-repeat;
-  background-size: cover;
-  overflow: hidden;
+  overflow: auto;
 }
 
 h1, h2, div, p, a {
